--- a/src/app/ui/settings.ui
+++ b/src/app/ui/settings.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>332</height>
+    <height>418</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,7 +17,7 @@
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>290</y>
+     <y>380</y>
      <width>341</width>
      <height>32</height>
     </rect>
@@ -37,15 +37,15 @@
     <rect>
      <x>30</x>
      <y>10</y>
-     <width>331</width>
-     <height>261</height>
+     <width>341</width>
+     <height>300</height>
     </rect>
    </property>
    <layout class="QGridLayout" name="settings_layout">
     <item row="0" column="0">
      <widget class="QLabel" name="user_label">
       <property name="text">
-       <string>User:</string>
+       <string>Usuario:</string>
       </property>
      </widget>
     </item>
@@ -55,7 +55,7 @@
     <item row="1" column="0">
      <widget class="QLabel" name="password_label">
       <property name="text">
-       <string>Password:</string>
+       <string>Clave:</string>
       </property>
      </widget>
     </item>
@@ -75,7 +75,7 @@
     <item row="3" column="0">
      <widget class="QLabel" name="port_label">
       <property name="text">
-       <string>Port:</string>
+       <string>Puerto:</string>
       </property>
      </widget>
     </item>
@@ -83,6 +83,20 @@
      <widget class="QTextEdit" name="port_text"/>
     </item>
    </layout>
+  </widget>
+  <widget class="QCheckBox" name="reset_database_checkbox">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>320</y>
+     <width>331</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Resetear Base de datos: Cuidado, marque
+y guarde para borrar los datos existentes</string>
+   </property>
   </widget>
  </widget>
  <resources/>
